Update tmux config, add oil to nvim, update zshrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark256'
 
+set -g @tmux-gruvbox-statusbar-alpha 'true'
+
 set -g @dracula-plugins " "
 set -g @dracula-show-left-icon session
 
@@ -42,7 +44,7 @@ set -g status-position top
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 set-option -g status-justify left
-set-window-option -g window-status-format '#[fg=white bg=colour237] [#I:#W] #[fg=white bg=white]'
-set-window-option -g window-status-current-format '#[bold]#[fg=black, bg=colour108] [#I:#W] '
-set-option -g status-left "#[fg=white bg=black] #S #[fg=black bg=colour237] "
+set-window-option -g window-status-format '#[fg=white] [#I:#W] #[fg=white bg=white]'
+set-window-option -g window-status-current-format '#[bold]#[fg=black, bg=yellow] [#I:#W] '
+set-option -g status-left "#[fg=white] #S  "
 set -g status-right '%a %d.%m.%y %H:%M '
